"Updated with the most recent edits by NSJ. Also added AS's edits into the 'edits' folder. Should be the last round of editing before submission. Need to create more figures."

--- a/nate-am-review/APR.bib
+++ b/nate-am-review/APR.bib
@@ -1,12 +1,35 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-27 12:43:31 -0700 
+%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-03-08 11:41:27 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Raccuglia2016,
+	Author = {Paul Raccuglia and Katherine C. Elbert and Philip D. F. Adler and Casey Falk and Malia B. Wenny and Aurelio Mollo and Matthias Zeller and Sorelle A. Friedler and Joshua Schrier and Alexander J. Norquist},
+	Date-Added = {2019-03-08 11:39:59 -0700},
+	Date-Modified = {2019-03-08 11:41:23 -0700},
+	Journal = {Nature Letters},
+	Month = {May},
+	Pages = {73-78},
+	Title = {Machine-learning-assisted materials discovery using failed experiments},
+	Volume = {533},
+	Year = {2016}}
+
+@article{Seifi2016,
+	Author = {Mohsen Seifi and Ayman Salem and Jack Beuth and Ola Harrysson and John J. Lewandowski},
+	Date-Added = {2019-03-08 11:20:48 -0700},
+	Date-Modified = {2019-03-08 11:22:05 -0700},
+	Journal = {JOM},
+	Month = {January},
+	Number = {3},
+	Pages = {747-764},
+	Title = {Overview of Materials Qualification Needs for Metal Additive Manufacturing},
+	Volume = {68},
+	Year = {2016}}
 
 @article{Li2017,
 	Author = {Shengyen Li and Ursula R. Kattner and Carelyn E. Campbell},
