--- a/nate-am-review/Notes/AnnotatedBibliography.tex
+++ b/nate-am-review/Notes/AnnotatedBibliography.tex
@@ -472,6 +472,8 @@ To be organized alphabetically by citation key.
 		\item Computer vision
 	\end{itemize}}
 	
+	\item \bibentry{Seifi2016} \textbf{Overview of standards development and qualification needs for additive manufacturing}
+	
 	\item \bibentry{Serra2007} \textbf{Applies support vector machines (SVM) to predict zeolite synthesis based on starting gel compositions and weight ratios; compared SVM to NN and classification trees.
 	\begin{itemize}
 		\item Alloy design
