--- a/nate-am-review/SectionII/DesignSpace.tex
+++ b/nate-am-review/SectionII/DesignSpace.tex
@@ -34,7 +34,7 @@ Representing data in the design space properly will be a major pre-processing st
             \hline
             \bottomrule
         \end{tabular}
-        \caption{A possible design space for laser powder bed fusion additive manufacturing. Any possible combination of these parameters is a point in the design space.}
+        \caption{A possible design space for laser powder bed fusion additive manufacturing. There are over $10^9$ possible combinations of machine inputs, based on the listed ranges and step sizes. Any possible combination of these parameters is a point in the design space.}
         \label{table:design_space}
     \end{center}
 \end{table*}
