"Updated with AS's most recent edits, up to SectionII.B. Start with Section II.C next."

--- a/nate-am-review/APR.bib
+++ b/nate-am-review/APR.bib
@@ -1,12 +1,75 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-03-08 11:41:27 -0700 
+%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-05-23 21:16:46 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{KernelMethod,
+	Author = {Wikipedia Contributors},
+	Date-Added = {2019-05-23 21:15:38 -0600},
+	Date-Modified = {2019-05-23 21:16:46 -0600},
+	Lastchecked = {Online; Accessed 24-May-2019},
+	Title = {Kernel Method -- {Wikipedia}{,} The Free Encyclopedia},
+	Url = {https://en.wikipedia.org/w/index.php?title=Kernel_method&oldid=897664033},
+	Year = {2019}}
+
+@article{Ball2019,
+	Author = {Philip Ball},
+	Date-Added = {2019-05-21 09:12:23 -0600},
+	Date-Modified = {2019-05-21 09:13:18 -0600},
+	Journal = {MRS Bulletin},
+	Month = {May},
+	Title = {Using artifical intelligence to accelerate materials development},
+	Volume = {44},
+	Year = {2019}}
+
+@article{Rajan2005,
+	Author = {Krishna Rajan},
+	Date-Added = {2019-05-20 17:08:23 -0600},
+	Date-Modified = {2019-05-20 17:09:21 -0600},
+	Journal = {Materials Today},
+	Month = {October},
+	Number = {10},
+	Pages = {38-45},
+	Title = {Materials Informatics},
+	Volume = {8},
+	Year = {2005}}
+
+@article{Agrawal2016,
+	Author = {Ankit Agrawal and Alok Choudhary},
+	Date-Added = {2019-05-20 17:06:30 -0600},
+	Date-Modified = {2019-05-20 17:07:33 -0600},
+	Journal = {APL Materials},
+	Number = {053208},
+	Title = {Perspective: Materials informatics and big data: Realization of the "fourth paradigm" of science in materials science},
+	Volume = {4},
+	Year = {2016}}
+
+@article{Panchal2013,
+	Author = {Jitesh H. Panchal and Surya R. Kalidindi and David L. McDowell},
+	Date-Added = {2019-05-16 16:14:18 -0600},
+	Date-Modified = {2019-05-16 16:15:19 -0600},
+	Journal = {Computer-Aided Design},
+	Pages = {4-25},
+	Title = {Key computational modeling issues in Integrated Computational Materials Engineering},
+	Volume = {45},
+	Year = {2013}}
+
+@article{Olson2000,
+	Author = {GB Olson},
+	Date-Added = {2019-05-16 10:19:32 -0600},
+	Date-Modified = {2019-05-16 10:20:18 -0600},
+	Journal = {Science},
+	Month = {May},
+	Number = {5468},
+	Pages = {993-998},
+	Title = {Designing a New Material World},
+	Volume = {288},
+	Year = {2000}}
 
 @article{Raccuglia2016,
 	Author = {Paul Raccuglia and Katherine C. Elbert and Philip D. F. Adler and Casey Falk and Malia B. Wenny and Aurelio Mollo and Matthias Zeller and Sorelle A. Friedler and Joshua Schrier and Alexander J. Norquist},
