--- a/nate-am-review/Main.tex
+++ b/nate-am-review/Main.tex
@@ -30,21 +30,26 @@
 \begin{document}
 \title{Data Driven Modeling, Statistical Analysis, and Machine Learning for Additive Manufacturing}
 \author{N.S. Johnson}
+\affiliation{Department of Mechanical Engineering, Colorado School of Mines, Golden, CO 80401}
+
+\author{C.K.H. Borg}
+\author{J. Saal}
+\affiliation{Citrine Informatics, Redwood City, CA 94063}
+
 \author{R. Liu}
 \author{X. Zhang}
 \author{C.A. Brice}
-\author{B. Kappes}
 \affiliation{Department of Mechanical Engineering, Colorado School of Mines, Golden, CO 80401}
 
 \author{H. Wang}
 \affiliation{Department of Computer Science, Colorado School of Mines, Golden, CO 80401}
 
-\author{C.K.H. Borg}
+
 \author{J. Ling}
-\author{J. Saal}
 \author{B. Meredig}
 \affiliation{Citrine Informatics, Redwood City, CA 94063}
 
+\author{B. Kappes}
 \author{A.P. Stebner$^*$}
 \affiliation{Department of Mechanical Engineering, Colorado School of Mines, Golden, CO 80401}
 
