--- a/nate-am-review/SectionII/SectionII.tex
+++ b/nate-am-review/SectionII/SectionII.tex
@@ -1,5 +1,5 @@
 \section{Phrasing Additive Manufacturing as a Machine Learning Problem}\label{phrasing}
-Data-driven modeling and machine learning have been employed to great success across several fields including materials science. While machine learning may seem foreign at first, readers will see that it can be expressed and understood in plain terms. Many of the tenets and frameworks for machine learning are based in mathematical operations which may be familiar to the reader, but applied in new ways. 
+Data-driven modeling and machine learning have been employed to great success across several fields including materials science. While machine learning may seem abstract at first, it can be expressed and understood in plain terms. Many of the tenets and frameworks for machine learning are based in mathematical operations which may be familiar to the reader, but applied in new ways. In this section, we proceed to define the basic terminology and classes of machine learning and data. Specific ML algorithms are then introduced specific to contextual AM examples in Section III.
 
 
 \input{SectionII/DesignSpace}
