--- a/nate-am-review/SectionIII/SectionIII.tex
+++ b/nate-am-review/SectionIII/SectionIII.tex
@@ -1,7 +1,7 @@
 \section{Current ICME Tools are Well Equipped to Integrate with an ML Framework}
-The following section details how machine learning approaches can tie-in to current efforts in AM. Since the study of AM is often focused around specific problems, this section is tailored to many common areas of study within AM. Typical analysis, characterization, and simulation methods for AM tie-in well with different machine learning algorithms. Even more so, ML can be used to automate the generation of knowledge about AM process-structure and process-property relationships. 
+The following section details how machine learning approaches can tie-in to current R\&D efforts in AM. Since the study of AM is often focused around specific problems, this section is tailored to many common areas of study within AM. Typical analysis, characterization, and simulation methods for AM tie-in well with different machine learning algorithms. Even more so, ML can be used to automate the generation of knowledge about AM process-structure and process-property relationships. 
 
-This article is not an exhaustive review of either machine learning algorithms or additive manufacturing. The algorithms discussed were chosen because they were previously demonstrated in a materials science and engineering applications \textbf{or} because the possible application of an algorithm to AM was clear and immediate. Similarly, the additive manufacturing problems addressed are not all-encompassing. The AM problems discussed are those which the authors felt most immediately addressable with machine learning. 
+This article is not an exhaustive review of either machine learning algorithms or additive manufacturing. The algorithms discussed were chosen because they were previously demonstrated in a materials science and engineering applications \textbf{or} because the possible application of an algorithm to AM was clear and immediate. Similarly, the additive manufacturing problems addressed are not all-encompassing; they are merely a few that may be immediately addressable with machine learning approaches. 
 
 %~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
 \subsection{Pre-Build Design}
