--- a/nate-am-review/SectionIV/SectionIV.tex
+++ b/nate-am-review/SectionIV/SectionIV.tex
@@ -1,4 +1,4 @@
-\section{Learning from the Past: Moving Towards Database-Driven Design of Additive}
+\section{Learning from the Past: Moving Towards Database-Driven Design of Additive Technologies}
 The scientific approaches to studying additive manufacturing discussed herein -- parametric analysis, computational modeling, in situ monitoring, and the like -- produce data. The application of machine learning to these scientific approaches likewise produces data. All of this data contains a slice of the AM design space. AM researchers who have access to more data in the design space can better tailor manufacturing processes and material properties. Furthermore, machine learning algorithms trained on large datasets typically have higher prediction accuracy and a greater range of behaviors they can model. Making AM process-structure and process-property data open and accessible to the scientific public accelerates the rate at which research and engineering advances.
 
 Databases of process-structure and process-property relationships are not a new concept in materials science. Databases like the Linus Pauling Files or International Crystal Structure Database have been widely used for materials design. However, databases of materials information are beginning to expand beyond general materials properties like thermodynamic behavior or crystal structure. Domain-specific databases are being generated from high throughput experimental and computational investigations that have occurred over the past thirty years. Studying and understanding the development of data-driven fields in materials science can aid in the development of data-driven approaches for additive manufacturing. 
