--- a/nate-am-review/SectionII/DataTypes.tex
+++ b/nate-am-review/SectionII/DataTypes.tex
@@ -1,7 +1,7 @@
 \subsection{Additive Manufacturing Data Types and Formats}
-Data types and sources in additive manufacturing are as widespread as any field of engineering and science. Machine learning algorithms, however, typically operate using specific mathematical representations of data. It is important to recognize all the different sources and formats of AM data and consider how they can be coerced into use for machine learning. 
+Data types and sources in additive manufacturing are as widespread as any field of engineering and science. Machine learning algorithms, however, typically operate using specific mathematical representations of data. It is important to recognize all the different sources and formats of AM data and consider how they can be coerced into use for machine learning. Representing data in the design space properly will be a major pre-processing step for machine algorithms to be amenable to AM optimization.
 
-Scalar data values are the most commonly obtained data in additive studies. A single set of manufacturing parameters, such as heat source parameters, can be represented as a list of scalars. Other scalar data can include material property measurements such as strength, hardness, density, moduli, and more. A good portion of this review covers how to model relationships between manufacturing parameters and material properties. In these cases, the machine inputs will most often be represented as a vector, such as
+Scalar data are the most commonly obtained data in materials science -- one simply needs to feel the weight of an ASME book on measured material properties to see this truth. Scalar data can include material property measurements such as strength, hardness, density and modulus. A single set of manufacturing parameters, such as heat source parameters, can also be represented as a list of scalars. Desired models in AM research include models of the relationships between material properties and manufacturing parameters. In these cases, the machine inputs will most often be represented as a vector, such as
 \begin{equation}
 \begin{split}
 	\mathbf{x} & = \text{[} \text{Machine Input 1, Machine Input 2,} \hdots  \\
@@ -11,19 +11,20 @@ Scalar data values are the most commonly obtained data in additive studies. A si
 \end{equation}
 out of $n$ many scalar machine inputs. Vector representations of the design space are useful in determining manufacturing conditions which will result in similar results, as well as in building regression models of the AM process.
 
-Another common data type is \textit{time series} data. Time series data are usually collected from models of the AM process or in situ measurement. Probably the most common time series data collected in AM is temperature histories. These data can sometimes be used as-is, or operations can be performed to extract scalar data values from the time series. Scalar statistical values such as the maximum, minimum, mean, and standard deviation of a time series signal can be equally useful in machine learning applications.
 
-Often, experimenters and modelers have quite a few data points already collected throughout the design space. They may have many vectors $\mathbf{x}_i$, each one containing machine inputs and measured or modeled material properties. It may make the most sense to represent the data as a matrix 
+Another common data type often represented by vectors is \textit{time series} data. Time series data are usually measured during the manufacturing process. Highly desired time series data collected during AM are temperature histories; others include videos, spectroscopy, and part deformation and strain. These data can sometimes be used as-is, or operations can be performed to extract scalar data values from the time series. Scalar statistical values such as the maximum, minimum, mean, and standard deviation of a time series signal can be equally useful in machine learning applications. Signal processing of time series data is also an active area of machine learning research which seeks to extract the most useful information from a time series. Pre-processing time series data can result in useful machine learning inputs; separately, signal processing algorithms have been used to reduce the amount of data required for machine learning to be successful \textbf{cite}.
+
+Matrices are perhaps the most diverse type of data used in terms of the range of materials science information that the can convey. Large datasets of scalar values measured multiple times will often be represented by a matrix where the columns represent each individual measurement type and the rows are repeated measurements of that value, usually for different samples. Representing this collection of scalar measurements as as a matrix can be useful; one example would be
 \begin{equation}
-	\mathbf{X} = \begin{bmatrix} x_{1,1} & x_{1,2} & \hdots & y_1 \\
-						x_{2,1} & x_{2,2} & \hdots & y_2 \\
+	\mathbf{X} = \begin{bmatrix} x_{1,1} & x_{1,2} & \hdots & x_{1,m} \\
+						x_{2,1} & x_{2,2} & \hdots & x_{2,m} \\
 						\vdots & \vdots & \vdots & \vdots \\
-						x_{n,1} & x_{n,2} & \hdots & y_n \\
+						x_{n,1} & x_{n,2} & \hdots & x_{n,m} \\
 				\end{bmatrix}
 	\label{matrix}
 \end{equation}
-where the columns of $\mathbf{X}$ represent individual machine inputs $x_i,j$ or material properties $y_i$ and each row is a different measurement made somewhere in the design space. 
+where the columns of $\mathbf{X}$ represent the different design space considerations being made, out of $m$, and there have been $n$ repeated measurements of each. Time series data can be represented in a similar way, with each column being a point in time and each row being a different measurement of the time series data \footnote{It is important to note that the row and column definitions given here are not concrete; indeed, the columns could be repeated measurements and the rows could represent different measurement types. If a machine learning algorithm is sensitive to the row-column definitions, the solution is as easy as taking a transpose.}.
 
-Scalar, vector, and matrix representations of AM data will be among the most common types of inputs for machine learning algorithms. If a particular algorithm discussed differs from this paradigm, it will be explicitly noted. 
+Images are also most often represented as matrices. Each entry in the matrix represents something about a corresponding pixel in the image: it could be a grayscale intensity, it could be one of the three RGB channel values, it could be a binary value, etc. Almost all image processing algorithms discussed in this review rely on a matrix representation of images. There are many toolboxes available, both free and commercial, which can pre-process images into the correct form for machine learning algorithms. Examples include the MATLAB Computer Vision Toolbox and the C++/Python OpenCV libraries.
 
-A final concept which is core to machine learning is \textit{covariance}. Covariance is measured between two data points $\kappa (\mathbf{x},\mathbf{x}')$, instead of being a property of a single data point. The covariance between data points encodes cross-correlated information within the design space. Ways of calculating covariance are many and varied and will be explicitly discussed where they are used. While many machine learning algorithms can operate directly on machine inputs and processing outputs, it can be equally useful to calculate covariances between data points and use those as machine learning inputs.
+While many machine learning algorithms can operate directly on machine inputs and processing outputs, it can be equally useful to calculate covariances between data points and use those as machine learning inputs. \textit{Covariance} is measured between two data points $\kappa (\mathbf{x},\mathbf{x}')$, instead of being a property of a single data point. The function $\kappa(\cdot,\cdot)$ is often referred to as a kernel function. The covariance between data points encodes cross-correlated information within the design space. In most cases, kernel functions assess the similarity of design space coordinates. Ways of calculating covariance are many and varied and will be explicitly defined where they are used. The nature of \textit{why} covariance is a useful tool for machine learning algorithms is slightly more complex than this review article allows; however, some of the most powerful and useful machine learning applications in materials science have relied on the calculation of covariance between design space coordinates. Readers who are seeking more information on the use of covariance in machine learning are directed to \cite{KernelMethod}.
