--- a/nate-am-review/SectionII/DesignSpace.tex
+++ b/nate-am-review/SectionII/DesignSpace.tex
@@ -1,9 +1,7 @@
 \subsection{The Design Space of Additive Manufacturing}
-The \textbf{design space} of additive manufacturing is the set of all machine parameters and measurable manufacturing phenomenon or material properties that result from the manufacturing process. It is summarized in Figure \ref{AMgene}. An example of controllable machine parameters can be found in Table \ref{table:design_space}. Measurable manufacturing phenomenon are quantities indicative of the processing history of the part. Examples include melt pool morphology, temperature, cooling rates, reflected intensity, and more. Measurable material properties are just that -- aspects of the final part which are relevant to scientific or engineering applications. 
+The \textbf{design space} of additive manufacturing is the set of all manufacturing parameters and material properties. More generally, the term `design space' will be used throughout this article to discuss the set of all additive manufacturing data which can be used with data-driven methods and machine learning algorithms. An example design space for laser powder bed fusion metals, the most prolific of current technologies, is depicted in Figure \ref{AMgene}. A complementary example of controllable manufacturing parameters is given in Table \ref{table:design_space}. Observable manufacturing phenomena may link the manufacturing parameters to the resulting materials properties, hence they may also be used to augment the manufacturing parameters and material properties within the design space. Examples include melt pool morphology, temperature and cooling rates.
 
-The term `design space' will be used throughout this article to discuss the set of all additive manufacturing data which can be used with data-driven methods and machine learning algorithms. A single set of machine parameters, observed process phenomenon, and measured material properties can be considered as a \textit{coordinate} in the design space. As an example, consider a list of parameters for a laser powder bed fusion process, such as: Alloy Composition, Laser Power, Scan Speed, Maximum Melt Pool Temperature, Average Cooling Rate, Final Density, Young's Modulus, Ultimate Tensile Strength. Any part which is manufactured under a single set of conditions and is observed to have a set thermal history and material properties can be considered to be manufactured \textit{at that point} in the design space.
-
-Representing data in the design space properly will be a major pre-processing step for machine algorithms to be amenable to AM optimization.
+A single set of machine parameters, observed process phenomenon, and measured material properties can be considered as a \textit{coordinate}, or point, in the design space. A single set of manufacturing parameters -- for example, a fixed laser power, scan speed, scan path, and layer thickness in LPBF -- is often thought of as a design space coordinate. Single coordinates, defined this way, can sometimes lead to a multitude of material properties due to latent variables, unforseen complications, and the stochasticity of the process. Include manufacturing phenomenon in the design space coordinate can more accurately identify truly unique points in the design space. Under a broader definition, any part which is manufactured under a single set of conditions and is observed to have a set thermal history and material properties can be considered to be manufactured \textit{at that point} in the design space.
 
 \begin{table*}[t]
     \renewcommand{\arraystretch}{0.8}
